@@ -6,6 +6,8 @@ Release history for Devel-Symdump-Compact
 
  [Internals]
  - factored out _class_subs function
+ - Method Resolution mechanics reworked to more closely reflect how perl-itself views methods. This will reduce certain
+   redundant duplicate coderefs and only show them at the lowest point in the heirachy where they are defined.
 
 0.001001 2016-04-01T09:31:35Z ab66fba
  - Minor documentation fixes.
